# HelloWorld

./: .gitignore  .gitmodules  AGENTS.md  AndroidManifest.xml  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  build.bat  build.gradle  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  dependency-submission.yml  release.yml
android/: AndroidManifest.xml  t.md
app/: build.gradle  build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  libmain.map.txt  main.c
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  locale_config.xml
gradle/: libs.versions.toml
res/values/: strings.xml
src/: main.c
src/com/oussamateyib/helloworld/: NativeLoader.java  R.java
